# pore-generate

./: .gitignore  README.md  config.json  main.py  pyproject.toml  shell.nix
docs/source/: conf.py  pore_generator.rst
report/: bib.bib  foo_bar.tex  main.typ  report.docx  shell.nix  test.json  ТУШКАНОВА БЕЛИКОВ ГОТОВО+.docx
report/fig/: foo.bar.xcf  redorm.aseprite  s_and_box_smooth.aseprite  sphere.aseprite  sphere_and_box.aseprite
report/resourses/: typ.typ  ТУШКАНОВА БЕЛИКОВ.docx
src/: config_loader.py  image_processor.py  pore_generator.py
