[project]
name = "pores_generator"
readme = "README.md"
version = "0.0.1"

dependencies = [
  "numpy",
  "opencv-python-headless",
  "scikit-image",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "click",

  "sphinx",
  "furo",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "PL"]

[tool.ruff.format]
quote-style = "double"
